--- a/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
+++ b/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
@@ -511,6 +511,10 @@
       <Project>{d2ac8387-fc21-4e8e-810b-c0a637d44222}</Project>
       <Name>Mes.Web.NET45</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\Util\Util.csproj">
+      <Project>{eece9b01-394b-4b1a-964a-6d9dcef14fa2}</Project>
+      <Name>Util</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OSharp.Demo.Contracts\Mes.Demo.Contracts.csproj">
       <Project>{2e6d22c7-37d5-4f1f-8d3e-2bcbd8f71b88}</Project>
       <Name>Mes.Demo.Contracts</Name>
