--- a/MesSharp/UnitTestProject1/UnitTestSiteManagementService.csproj
+++ b/MesSharp/UnitTestProject1/UnitTestSiteManagementService.csproj
@@ -55,8 +55,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestSiteManagementService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestIdentityService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
