--- a/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
+++ b/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
@@ -407,14 +407,14 @@
     </Content>
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
-    <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Home\Main.cshtml" />
     <Content Include="Areas\Admin\Views\Home\Welcome.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_DataGridLayout.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Organizations\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_TreeGridLayout.cshtml" />
-    <Content Include="Areas\Admin\Views\Home\Login.cshtml" />
+    <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Department\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Factory\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ProblemSource\Index.cshtml" />
@@ -446,7 +446,9 @@
     <Content Include="Scripts\jquery-1.11.1.js" />
     <Content Include="Scripts\jquery-1.11.1.min.js" />
     <Content Include="Scripts\jquery-1.11.1.min.map" />
+    <Content Include="Scripts\jquery-1.8.0.min.js" />
     <Content Include="Scripts\jquery.easyui-1.4.1.js" />
+    <Content Include="Scripts\jquery.easyui.min-1.3.2.js" />
     <Content Include="Scripts\jquery.easyui.min-1.4.1.js" />
     <None Include="Scripts\jquery.linq-vsdoc.js" />
     <Content Include="Scripts\jquery.linq.js" />
