--- a/MesSharp/src/OSharp.Web/Mes.Web.NET45.csproj
+++ b/MesSharp/src/OSharp.Web/Mes.Web.NET45.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Mvc\Binders\StringTrimModelBinder.cs" />
     <Compile Include="Mvc\Extensions\Caching\RecordWriter.cs" />
     <Compile Include="Mvc\Extensions\HtmlHelperExtensions.cs" />
+    <Compile Include="Mvc\Filters\ActionAuthorityFilter.cs" />
     <Compile Include="Mvc\Filters\HandleAjaxErrorAttribute.cs" />
     <Compile Include="Mvc\Filters\NonRequireHttpsAttribute.cs" />
     <Compile Include="Mvc\Filters\OnlineUserFilterBaseAttribute.cs" />
