--- a/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
+++ b/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
@@ -124,6 +124,7 @@
     <Content Include="Content\images\Login\login03.jpg" />
     <Content Include="Content\images\Login\login04.jpg" />
     <Content Include="Content\images\Login\login05.jpg" />
+    <Content Include="Content\images\Login\Longcheer.gif" />
     <Content Include="Content\images\Login\password.gif" />
     <Content Include="Content\images\Login\user.gif" />
     <Content Include="Content\images\tools.png" />
@@ -446,6 +447,8 @@
     <Content Include="Scripts\jquery-1.11.1.js" />
     <Content Include="Scripts\jquery-1.11.1.min.js" />
     <Content Include="Scripts\jquery-1.11.1.min.map" />
+    <Content Include="Scripts\jquery-1.6.0.min.js" />
+    <Content Include="Scripts\jquery-1.7.2.min.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
     <Content Include="Scripts\jquery.easyui-1.4.1.js" />
     <Content Include="Scripts\jquery.easyui.min-1.3.2.js" />
