增加代理解决第一次访问慢的问题

--- a/MesSharp/samples/OSharp.Demo.Web/Web.config
+++ b/MesSharp/samples/OSharp.Demo.Web/Web.config
@@ -67,4 +67,13 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.net>  
+    <defaultProxy  
+        enabled="false"  
+        useDefaultCredentials="false" >  
+      <proxy/>  
+      <bypasslist/>  
+      <module/>  
+    </defaultProxy>  
+  </system.net> 
 </configuration>
