--- a/MesSharp/samples/OSharp.Demo.Services/Mes.Demo.Services.csproj
+++ b/MesSharp/samples/OSharp.Demo.Services/Mes.Demo.Services.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModelConfigurations\TestLog\OperationLogConfiguration.cs" />
+    <Compile Include="ModelConfigurations\TestLog\CpkConfiguration.cs" />
     <Compile Include="ModelConfigurations\Identity\MenuConfigurations.cs" />
     <Compile Include="ModelConfigurations\Identity\OrganizationConfiguration.cs">
       <SubType>Code</SubType>
@@ -85,6 +87,9 @@
     <Compile Include="ModelConfigurations\Test\LineConfiguration.cs" />
     <Compile Include="ModelConfigurations\Test\StationConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TestLog\CpkService.OperationLog.cs" />
+    <Compile Include="Services\TestLog\CpkService.Cpk.cs" />
+    <Compile Include="Services\TestLog\CpkService.cs" />
     <Compile Include="Services\IdentityService.cs" />
     <Compile Include="Services\IdentityService.Organization.cs">
       <SubType>Code</SubType>
