--- a/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
+++ b/MesSharp/samples/OSharp.Demo.Web/Mes.Demo.Web.csproj
@@ -424,10 +424,12 @@
     <Content Include="Areas\Admin\Views\Factory\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ProblemSource\Index.cshtml" />
     <Content Include="Areas\Admin\Views\ProblemType\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Cpk\Index.cshtml" />
     <None Include="Areas\Admin\Views\Line\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Role2User.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Role2Privage.cshtml" />
     <Content Include="Areas\Admin\Views\Problem\report.cshtml" />
+    <Content Include="Areas\Admin\Views\OperationLog\Index.cshtml" />
     <None Include="Areas\Admin\Views\Station\Index.cshtml">
       <SubType>
       </SubType>
@@ -506,6 +508,8 @@
     <Compile Include="Areas\Admin\Controllers\SiteManagement\FactoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\SiteManagement\DepartmentController.cs" />
     <Compile Include="Areas\Admin\Controllers\SiteManagement\ProblemController.cs" />
+    <Compile Include="Areas\Admin\Controllers\TestLog\CpkController.cs" />
+    <Compile Include="Areas\Admin\Controllers\TestLog\OperationLogController.cs" />
     <Compile Include="Areas\Admin\Controllers\Test\LineController.cs" />
     <Compile Include="Areas\Admin\Controllers\Test\StationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
