修改了超时设置

--- a/MesSharp/samples/OSharp.Demo.Web/Web.config
+++ b/MesSharp/samples/OSharp.Demo.Web/Web.config
@@ -14,11 +14,11 @@
     <add key="Mes-DataLoggingEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=MesDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=MesDemo2; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="102400" executionTimeout="720"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
