--- a/MesSharp/CpkDemo/App.config
+++ b/MesSharp/CpkDemo/App.config
@@ -6,7 +6,7 @@
   <connectionStrings>
     <!--<add name="SQLConnString3" connectionString="Data Source=172.16.191.16;Initial Catalog=cpklog;Persist Security Info=True;User ID=cpklog;Password=cpklog;"/>
    -->
-    <add name="SQLConnString3" connectionString="Data Source=.;Initial Catalog=MesDemo2;Integrated Security=True"/>
+    <add name="SQLConnString3" connectionString="Data Source=.;Initial Catalog=CpkDemo;Integrated Security=True"/>
 
   </connectionStrings>
   <appSettings>
@@ -18,7 +18,7 @@
     <add key="CSVNO_LOG_TO_PATH" value="D:\\test-zip\\CvsNo"/>
     <add key="HTML_LOG_FROM_PATH" value="D:\\test-log\\Html"/>
     <add key="HTML_LOG_TO_PATH" value="D:\\test-zip\\Html"/>
-    <add key="Cpk_LOG_FROM_PATH" value="D:\\test-log\\CPK"/>
+    <add key="Cpk_LOG_FROM_PATH" value="D:\\test-log\\CPK2"/>
     <add key="Cpk_LOG_TO_PATH" value="D:\\test-zip\\CPK"/>
     <add key="SYS_LOG_PATH" value="D:\\test-zip"/>
     <!-- 读取 音频 XML 格式 Log-->
