--- a/MesSharp/samples/OSharp.Demo.Web/Web.config
+++ b/MesSharp/samples/OSharp.Demo.Web/Web.config
@@ -14,7 +14,7 @@
     <add key="Mes-DataLoggingEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=MesDemo2; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
