--- a/MesSharp/samples/OSharp.Demo.Consoles/App.config
+++ b/MesSharp/samples/OSharp.Demo.Consoles/App.config
@@ -5,12 +5,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
-    <add key="Mes-EntryLogLevel" value="Info" />
-    <add key="Mes-ConnectionStringName" value="default" />
-    <add key="Mes-DataLoggingEnabled" value="false" />
+    <add key="Mes-EntryLogLevel" value="Debug" />
+    <add key="Mes-ConnectionStringName" value="Default" />
+    <add key="Mes-DataLoggingEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
