--- a/MesSharp/samples/OSharp.Demo.Web/Web.Release.config
+++ b/MesSharp/samples/OSharp.Demo.Web/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="default"
+      connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
