--- a/MesSharp/samples/OSharp.Demo.Web/Web.config
+++ b/MesSharp/samples/OSharp.Demo.Web/Web.config
@@ -10,11 +10,11 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="Mes-EntryLogLevel" value="Trace" />
-    <add key="Mes-ConnectionStringName" value="default" />
+    <add key="Mes-ConnectionStringName" value="Default" />
     <add key="Mes-DataLoggingEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
