--- a/MesSharp/samples/OSharp.Demo.Web/Web.Debug.config
+++ b/MesSharp/samples/OSharp.Demo.Web/Web.Debug.config
@@ -7,13 +7,13 @@
     在下例中，“SetAttributes”转换将更改 
     “connectionString”的值，以仅在“Match”定位器 
     找到值为“MyDB”的特性“name”时使用“ReleaseSQLServer”。
-    
+     -->
     <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+      <add name="default" 
+        connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;Connect Timeout=18000;" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
+ 
   <system.web>
     <!--
       
